--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "firebase": "^9.17.2",
+    "json-2-csv": "^3.20.0",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
